# at32f4xx-pac

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  generate.ps1
patches/: at32a403a.yaml  at32f402.yaml  at32f403.yaml  at32f403a.yaml  at32f405.yaml  at32f407.yaml  at32f413.yaml  at32f415.yaml  at32f421.yaml  at32f423.yaml  at32f425.yaml  at32f435.yaml  at32f437.yaml  at32wb415.yaml
patches/common/: f402_405.yaml  f403a_407.yaml  f435_437.yaml
src/: generic.rs  lib.rs
src/at32a403a/: acc.rs  adc2.rs  at32a403a.svd  bpr.rs  crc.rs  crm.rs  dac.rs  debug.rs  device.x  dma1.rs  ethernet_mmc.rs  ethernet_ptp.rs  flash.rs  gpioa.rs  iomux.rs  mod.rs  pwc.rs  rtc.rs  sdio1.rs  tmr1.rs  tmr2.rs  tmr3.rs  tmr9.rs  usbfs.rs  wdt.rs  xmc.rs
src/at32f402/: acc.rs  adc1.rs  adccom.rs  at32f402.svd  can1.rs  crc.rs  crm.rs  debug.rs  device.x  dvp.rs  ertc.rs  gpioa.rs  i2sf5.rs  mod.rs  pwc.rs  qspi1.rs  sdio1.rs  tmr1.rs  tmr10.rs  tmr14.rs  tmr2.rs  tmr3.rs  tmr9.rs  usart1.rs  usb_otg1_pwrclk.rs
src/at32f403/: adc3.rs  at32f403.svd  crm.rs  dac.rs  device.x  dma1.rs  dma2.rs  exint.rs  flash.rs  gpioa.rs  i2c1.rs  iomux.rs  mod.rs  sdio1.rs  spi1.rs  tmr2.rs  tmr3.rs  tmr6.rs  tmr9.rs  usart1.rs  usbfs.rs  wdt.rs  xmc.rs
src/at32f403a/: acc.rs  adc3.rs  at32f403a.svd  bpr.rs  can1.rs  crc.rs  crm.rs  dac.rs  debug.rs  dma1.rs  flash.rs  gpioa.rs  mod.rs  pwc.rs  sdio1.rs  spi1.rs  tmr1.rs  tmr10.rs  tmr6.rs  tmr9.rs  usart1.rs  usbfs.rs  xmc.rs
src/at32f405/: adc1.rs  adccom.rs  at32f405.svd  can1.rs  crm.rs  debug.rs  device.x  dma1.rs  dvp.rs  ertc.rs  (+21 more)
(+4692 files in other folders)
